Replace depecrated new method for Integer/Long (#25623)